--- a/main.css
+++ b/main.css
@@ -2,70 +2,87 @@ body {
   background-color: powderblue;
 }
 
-img {
-  height: 100%; 
+.home-body {
+  position: relative;
+}
+.home-body figure.masthead {
+  height: 100%;
   width: 100%;
 }
-.tall {
-  height: 600px;
+.home-body figure.masthead img {
+  filter: blur(3px);
+  height: 100%;
+  width: 100%;
+  max-height: 100%;
+  max-width: 100%;
+}
+.home-body .header-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 30px;
+  background: rgba(1, 1, 1, 0.85);
+  border: 3px solid white;
+  color: white;
+}
+.home-body .header-content strong {
+  color: darkorchid;
 }
 
-figure.masthead {
-    position: absolute;
-    max-height: 600px;
-    width: 100%;
-/*    filter: grayscale(50%);*/
-     filter: blur(3px);
-}
-
-.header-content {
-    position: relative;
-    padding: 10px;
-    margin: auto;
-    background: rgba(1,1, 1, 0.9);
-    border: 5px solid white;
-    color: white;
-}
-
-.gray {
-  background-color: gray;
-}
-
-.content-center{
+.content-center {
   /* padding-left: auto;
   padding-right: auto; */
   text-align: center;
   vertical-align: center;
   margin: auto;
 }
-.orange {
-  background-color: orange;
-}
-
 
 div.animation {
   width: 100px;
   height: 100px;
   background-color: red;
   position: relative;
-  -webkit-animation-name: example; /* Safari 4.0 - 8.0 */
-  -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
+  -webkit-animation-name: example;
+  /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 4s;
+  /* Safari 4.0 - 8.0 */
   animation-name: example;
   animation-duration: 4s;
 }
 
 @keyframes example {
-  0%   {background-color:red; left:0px; top:0px;}
-  25%  {background-color:yellow; left:200px; top:0px;}
-  50%  {background-color:blue; left:200px; top:200px;}
-  75%  {background-color:green; left:0px; top:200px;}
-  100% {background-color:red; left:0px; top:0px;}
+  0% {
+    background-color: red;
+    left: 0px;
+    top: 0px;
+  }
+  25% {
+    background-color: yellow;
+    left: 200px;
+    top: 0px;
+  }
+  50% {
+    background-color: blue;
+    left: 200px;
+    top: 200px;
+  }
+  75% {
+    background-color: green;
+    left: 0px;
+    top: 200px;
+  }
+  100% {
+    background-color: red;
+    left: 0px;
+    top: 0px;
+  }
 }
-
 nav {
   position: fixed;
   top: 0;
 }
+
 ul {
   list-style-type: none;
   margin: 0;
@@ -87,32 +104,40 @@ li a:hover {
   color: white;
 }
 
-
-
-
-
 .typewriter h1 {
   text-align: left;
   color: #fff;
   font-family: monospace;
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid orange; /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: .15em; /* Adjust as needed */
-  animation: 
-    typing 3.5s steps(30, end),
-    blink-caret .8s step-end infinite;
+  overflow: hidden;
+  /* Ensures the content is not revealed until the animation */
+  border-right: 0.15em solid orange;
+  /* The typwriter cursor */
+  white-space: nowrap;
+  /* Keeps the content on a single line */
+  margin: 0 auto;
+  /* Gives that scrolling effect as the typing happens */
+  letter-spacing: 0.15em;
+  /* Adjust as needed */
+  animation: typing 3.5s steps(30, end), blink-caret 0.8s step-end infinite;
 }
 
 /* The typing effect */
 @keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
 }
-
 /* The typewriter cursor effect */
 @keyframes blink-caret {
-  from, to { border-color: transparent }
-  50%      { border-color: orange }
+  from, to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: orange;
+  }
 }
+
+/*# sourceMappingURL=main.css.map */
