--- a/main.scss
+++ b/main.scss
@@ -60,15 +60,24 @@ nav {
     }
 }
 
+.section-header {
+    font-size: 28px;
+    margin: auto;
+    border-bottom: 2px solid black;
+}
+
+.about-tall {
+    height: 400px; // temp delete later
+}
+
+.content-about {
+    margin: 20px;
+    padding: 20px;
+}
+
 #Portfolio {
     padding: 10px;
     background-color: $color-lightgray;
-
-    .section-header {
-        font-size: 28px;
-        margin: auto;
-        border-bottom: 2px solid black;
-    }
 
     .portfolio-display {
         width: 100%;
@@ -94,6 +103,7 @@ nav {
                 &:hover {
                     opacity: 1;
                     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+                    cursor: pointer;
                 }
                 &:not(:hover) {
                     opacity: .4;
@@ -117,8 +127,9 @@ nav {
                     max-height: 300px;
                 }
 
-                .portfolio-short {
-                    
+                .portfolio-name {
+                    font-size: 22px;
+                    text-align: center;
                 }
             }
         }
@@ -126,12 +137,39 @@ nav {
 }
 
 
+/* The Modal (background) */
+.modal {
+    display: block; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 2px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+
 .content-center{
     /* padding-left: auto;
     padding-right: auto; */
     text-align: center;
     vertical-align: center;
     margin: auto;
+}
+
+.contact-tall {
+    height: 300px;
 }
 
 
