--- a/main.css
+++ b/main.css
@@ -130,10 +130,9 @@ nav a {
   /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4);
   /* Black w/ opacity */
+  /* Modal Content/Box */
 }
-
-/* Modal Content/Box */
-.modal-content {
+.modal .modal-content {
   background-color: #fefefe;
   margin: 15% auto;
   /* 15% from the top and centered */
