--- a/main.css
+++ b/main.css
@@ -165,6 +165,10 @@ nav .navbar-brand:hover {
   text-align: center;
 }
 
+.container:nth-child(2n+3) {
+  background-color: #888;
+}
+
 div.animation {
   width: 100px;
   height: 100px;
