--- a/main.scss
+++ b/main.scss
@@ -1,10 +1,16 @@
 body {
     background-color: powderblue;
+
+    figure {
+        margin: 0;
+    }
 }
 
 $color-white: #FFFFFF;
-$color-lightgray: #f6f6f6;
-// $color-gray: #282828;
+$color-lightgray: #CCC;
+$color-black: #000;
+
+
 
 nav {
     position: fixed;
@@ -14,9 +20,9 @@ nav {
     padding-left: 25px;
     z-index: 100;
     background-color: rgb(105, 105, 105);
-    color: black;
+    color: $color-black;
     .navbar-brand {
-        color: black;
+        color: $color-black;
         
         &:hover {
           cursor: pointer;
@@ -24,6 +30,35 @@ nav {
         }
     }
 }
+
+button, .btn {
+    width: 200px;
+    padding: 10px;
+    border-radius: 10px;
+    border: 2px solid $color-white;
+    background-color: lightpink;
+    cursor: pointer;
+
+    &:hover {
+        animation: btn-hover .5s ease both;
+    }
+
+    @keyframes btn-hover {
+        0% { }
+        100% { 
+            border-color: lightpink;
+            background-color: $color-white;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        }
+    }
+}
+
+img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
 
 
 .home-body {
@@ -67,12 +102,6 @@ nav {
 
 }
 
-.section-header {
-    font-size: 28px;
-    margin: auto;
-    border-bottom: 2px solid black;
-}
-
 .about-tall {
     height: 400px; // temp delete later
 
@@ -85,56 +114,35 @@ nav {
 
 #Portfolio {
     padding: 10px;
-    background-color: $color-lightgray;
+    // background-color: $color-lightgray;
 
     .portfolio-display {
         width: 100%;
-        padding: 10px 0;
+        padding: 20px 0;
 
         ul {
             display: flex;
             flex-flow: row wrap;
             justify-content: space-around;
             list-style: none;
-
-            &:not(:hover) li {
-                opacity: 1 !important;
-                img {
-                    filter: grayscale(0) !important;
-                }
-            }
-            
-
-            // &:not(:hover) li {
-            //     opacity: 1 !important;
-            //     img {
-            //         filter: grayscale(0) !important;
-            //     }
-            // }
+            padding: 10px;
 
             li {
                 display: inline;
-                padding: 10px;
+                margin: 10px;
+                position: relative;
 
                 &:hover {
-                    opacity: 1;
                     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-                    cursor: pointer;
-                }
-                &:not(:hover) {
-                    opacity: .4;
-                    img { filter: grayscale(50%); }
-                    // animation-name: abc;
-                    // animation-duration: 2s;
-                    // @keyframes abc {
-                    //     0%   {}
-                    //     100% {
-                    //         opacity: .4;
-                    //         // img { filter: grayscale(100%); }
-                    //     }
-                    // }
-                    
-                    
+
+                    img {
+                        filter: grayscale(50%);
+                        animation: blur 1s ease both;
+                    }
+                    .portfolio-name, .preview {
+                        display: inline;
+                        animation: show-button 1s ease both;
+                    }
                 }
                 figure img {
                     width: 300px;
@@ -144,6 +152,22 @@ nav {
                 }
 
                 .portfolio-name {
+                    display: none;
+                    position: absolute;
+                    top: 80%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    font-size: 22px;
+                    margin: auto;
+                    text-align: center;
+                }
+
+                .preview {
+                    // display: none;
+                    position: absolute;
+                    top: 25%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
                     font-size: 22px;
                     margin: auto;
                     text-align: center;
@@ -153,13 +177,19 @@ nav {
     }
 }
 
+@keyframes blur {
+    0%   { filter: blur(0px); }
+    100% { filter: blur(3px); }
+}
+@keyframes show-button {
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
+}
 
 .contact-tall {
-    // height: 500px;
-
     .content-contact {
-        margin: 20px;
-        padding: 20px;
+        margin: 20px 20px 0;
+        padding: 20px 0;
         width: 100%;
     }
 
@@ -184,19 +214,52 @@ nav {
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
 
-      /* Modal Content/Box */
-  .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 2px solid #888;
-    width: 60%; /* Could be more or less, depending on screen size */
-  }
-  
+        /* Modal Content/Box */
+    .modal-content {
+        // display: inline;
+        background-color: #fefefe;
+        margin: 5% auto; /* 15% from the top and centered */
+        padding: 20px;
+        border: 2px solid #888;
+        width: 60%; /* Could be more or less, depending on screen size */
+    
+        figure {
+            margin: -20px;
+            padding-bottom: 30px;
+            img {
+                max-height: 300px;
+            }
+        }
+
+        .title {
+            font-size: 20px;
+        }
+
+        .tag {
+            color: $color-lightgray;
+            padding-bottom: 20px;
+            border-bottom: 2px solid $color-lightgray;  
+        }
+
+        .description {
+            padding: 20px 0;
+        }
+        .row {
+            margin: 0px;
+            .link {
+                color: $color-black;
+            }
+    
+            .close {
+                vertical-align: middle;
+                margin-left: auto;
+                font-size: 40px;
+            }
+        }
+    } 
 }
-  
 
 
 .content-center{
@@ -207,10 +270,42 @@ nav {
     // margin: auto;
 }
 
-.container {
-    &:nth-child(2n+3) {
-        background-color: #888;
+.section {
+    &:first-child {
+        margin-top: -20px;
     }
+
+    &:nth-child(2n+3) {
+        background-color: $color-lightgray;
+    }
+
+    width: 100%;
+
+    align-items: center;
+
+    .section-header {
+        font-size: 28px;
+        padding-top: 30px;
+        text-align: center;
+        animation: slide-in-right 1s ease both;
+
+        .section-title {
+            display: inline;
+            border-bottom: 2px solid $color-black;   
+        }
+    }
+    
+    @keyframes slide-in-right {
+        0% {
+            opacity: 0;
+            transform: translateX(400px);
+        }
+        100% {
+            opacity: 1;
+            transform: translateX(0);
+        }
+    }
+    
 }
 
 
