--- a/main.scss
+++ b/main.scss
@@ -5,6 +5,7 @@ $color-white: #FFFFFF;
 $color-lightgray: #CCC;
 $color-black: #000;
 $color-lightblue: #04C2C9;
+$color-lightpink: lightpink;
 
 body {
     // background-color: darkblue;
@@ -19,15 +20,17 @@ nav {
     top: 0;
     left: 0;
     width: 100%;
-    padding-left: 25px;
+    padding-left: 30px;
     z-index: 100;
     background-color: $color-darkblue;
     border-bottom: 2px solid $color-lightblue; 
     .navbar-brand {
         color: $color-white;
-        
+        padding-right: 30px;
+
         &:hover {
           cursor: pointer;
+          color: $color-lightpink;
 
         }
     }
@@ -41,19 +44,14 @@ button, .btn {
     background-color: lightpink;
     color: $color-white;
     cursor: pointer;
+    transition: all 0.8s ease both;
 
     &:hover {
-        animation: btn-hover .5s ease both;
-    }
-
-    @keyframes btn-hover {
-        0% { color: $color-white; }
-        100% { 
-            background-color: $color-white;
-            border: 2px solid lightpink;
-            color: lightpink;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        }
+        transition: all 0.8s ease both;
+        background-color: $color-white;
+        border: 2px solid lightpink;
+        color: lightpink;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 }
 
@@ -63,7 +61,11 @@ img {
     height: 100%;
 }
 
-
+.container {
+    @media (max-width: 776px) {
+        // margin: 0 !important;
+    }
+}
 
 .home-body {
     position: relative;
@@ -137,18 +139,20 @@ img {
                 display: inline;
                 margin: 10px;
                 position: relative;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
                 &:hover {
                     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
                     img {
-                        // filter: grayscale(50%);
-                        // animation: blur 1s ease both;
-                        animation: whiten-img 1s ease both;
+                        transition: all 1.2s;
+                        opacity: 0.2;
+                        filter: blur(3px);
                     }
                     .preview {
-                        display: inline;
-                        animation: show-button 1s ease both;
+                        transition: all 1.2s;
+                        opacity: 1;
+                        // display: block;
                     }
                 }
                 figure img {
@@ -156,30 +160,32 @@ img {
                     height: 200px;
                     max-width: 300px;
                     max-height: 300px;
+                    transition: all 1.2s;
+                    opacity: 1;
+                    filter: blur(0px);
                 }
 
                 .preview {
-                    display: none;
+                    // display: none;
                     position: absolute;
                     height: 100%;
                     top: 10%;
                     left: 50%;
                     transform: translate(-50%, 0%);
                     font-size: 22px;
-                    // margin: auto;
                     text-align: center;
-                    color: $color-white;
-
+                    color: $color-darkblue;
+                    transition: all 1.2s;
+                    opacity: 0;
 
                     .learn-more {
                         // position: absolute;
                         // top: 80%;
                         // left: 50%;
                         // transform: translate(-50%, -50%);
-                        // margin-top: 16px;
                         border-color: $color-lightblue;
                         font-size: 22px;
-                        margin: auto;
+                        margin: 26 auto auto;
                         text-align: center;
                     }
                 }
@@ -188,18 +194,6 @@ img {
     }
 }
 
-@keyframes blur {
-    0%   { filter: blur(0px); }
-    100% { filter: blur(3px); }
-}
-@keyframes show-button {
-    0%   { opacity: 0; }
-    100% { opacity: 1; }
-}
-@keyframes whiten-img {
-    0%   { opacity: 1; }
-    100% { opacity: 0.1; }
-}
 
 .contact-tall {
     .content-contact {
@@ -209,14 +203,18 @@ img {
 
     form {
         width: 400px;
+        padding-bottom: 10px;
+        margin-bottom: 10px;
         margin: auto;
         
         fieldset {
             input, textarea {
                 display: block;
                 width: 100%;
-                margin: 5px;
-                border: 1px solid black;
+                margin: 10px 0;
+                border-radius: 10px;
+                padding: 8px;
+                border: 1px solid $color-lightgray;
             }
         }
     }
@@ -291,9 +289,13 @@ img {
         margin-top: -20px;
     }
 
-    background-color: $color-lightblue;
+    // background-color: $color-lightblue;
+    background-image: linear-gradient(to right, rgba( 4, 194, 201, 0.16) , rgba( 228, 247, 20, 0.19));
+    background-color: white;
     &:nth-child(2n+3) {
         background-color: $color-lightgray;
+        background-image: linear-gradient(to right, rgba( 96, 247, 20, 0.15),rgba( 250, 172, 70, 0.19));
+        // background-image:none;// linear-gradient(to right, white , $color-lightgray);
     }
 
     width: 100%;
@@ -341,41 +343,6 @@ footer {
             height: 40px;
         }
     }
-}
-
-div.animation {
-width: 100px;
-height: 100px;
-background-color: red;
-position: relative;
--webkit-animation-name: example; /* Safari 4.0 - 8.0 */
--webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
-}
-
-.typewriter h1 {
-text-align: left;
-color: #fff;
-font-family: monospace;
-overflow: hidden; /* Ensures the content is not revealed until the animation */
-border-right: .15em solid orange; /* The typwriter cursor */
-white-space: nowrap; /* Keeps the content on a single line */
-margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-letter-spacing: .15em; /* Adjust as needed */
-animation: 
-    typing 3.5s steps(30, end),
-    blink-caret .8s step-end infinite;
-}
-
-/* The typing effect */
-@keyframes typing {
-from { width: 0 }
-to { width: 100% }
-}
-
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-from, to { border-color: transparent }
-50%      { border-color: orange }
 }
 
   
