--- a/main.scss
+++ b/main.scss
@@ -1,57 +1,69 @@
 
-
 $color-darkblue: #1B242F;
 $color-white: #FFFFFF;
 $color-lightgray: #CCC;
 $color-black: #000;
 $color-lightblue: #04C2C9;
-$color-lightpink: lightpink;
+$color-lightpink:  #E31B6D;//lightpink;
+$color-hotpink: #E31B6D;
 
 body {
     // background-color: darkblue;
     background-color: $color-darkblue !important;
-
+    // background-image: linear-gradient(to right, rgba( 4, 194, 201, 0.16) , rgba( 228, 247, 20, 0.19));
     figure {
         margin: 0;
     }
-}
-nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding-left: 30px;
-    z-index: 100;
-    background-color: $color-darkblue;
-    border-bottom: 2px solid $color-lightblue; 
-    .navbar-brand {
-        color: $color-white;
-        padding-right: 30px;
 
-        &:hover {
-          cursor: pointer;
-          color: $color-lightpink;
+    nav {
+        position: fixed;
+        opacity: 0.9;
+        top: 0;
+        left: 0;
+        width: 100%;
+        padding-left: 30px;
+        z-index: 100;
+        background-color: $color-darkblue;
+        border: none;
+        border-bottom: 2px solid $color-lightblue; 
 
+        .navbar-brand {
+            color: $color-white;
+            padding-right: 30px;
+            transition: color 0.5s;
+            text-transform: uppercase;
+
+            &.active {
+                color: $color-lightpink;
+            }
+            &:hover {
+              cursor: pointer;
+            }
         }
     }
+}
+
+@mixin element-shadow {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 button, .btn {
     width: 200px;
     padding: 10px;
+    margin: 10px;
     border-radius: 10px !important;
-    border: 2px solid lightpink;
-    background-color: lightpink;
+    border: 2px solid $color-lightpink;
+    background-color: $color-lightpink;
     color: $color-white;
-    cursor: pointer;
-    transition: all 0.8s ease both;
+    @include element-shadow;
+    transition: all 0.6s;
 
     &:hover {
-        transition: all 0.8s ease both;
+        width: 205px;
         background-color: $color-white;
-        border: 2px solid lightpink;
-        color: lightpink;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        border: 2px solid $color-lightpink;
+        color: $color-lightpink;
+        transition: all 0.6s;
     }
 }
 
@@ -102,27 +114,33 @@ img {
         color: white;
 
         strong {
-            color: darkorchid;
+            color: $color-lightpink;//darkorchid;
         }
     }
-
 }
 
 .about-tall {
-    height: 400px; // temp delete later
+    // height: 400px; // temp delete later
+    padding-top: 10px;
 
     .content-about {
-        margin: 20px;
         padding: 20px;
+
+        figure img {
+            width: 300px;
+            height: 200px;
+            max-width: 300px;
+            max-height: 300px;
+            transition: all 1.2s;
+            opacity: 1;
+            filter: blur(0px);
+        }
     }
 }
 
 
 #Portfolio {
     padding: 10px;
-
-    
-    // background-color: $color-lightgray;
 
     .portfolio-display {
         width: 100%;
@@ -183,7 +201,7 @@ img {
                         // top: 80%;
                         // left: 50%;
                         // transform: translate(-50%, -50%);
-                        border-color: $color-lightblue;
+                        border-color: $color-lightpink;
                         font-size: 22px;
                         margin: 26 auto auto;
                         text-align: center;
@@ -201,8 +219,13 @@ img {
         width: 100%;
     }
 
+    .sub-text {
+        text-align: center;
+        padding-top: 24px;
+    }
+
     form {
-        width: 400px;
+        max-width: 400px;
         padding-bottom: 10px;
         margin-bottom: 10px;
         margin: auto;
@@ -211,9 +234,10 @@ img {
             input, textarea {
                 display: block;
                 width: 100%;
-                margin: 10px 0;
+                margin: 20px 0;
                 border-radius: 10px;
                 padding: 8px;
+                @include element-shadow;
                 border: 1px solid $color-lightgray;
             }
         }
@@ -270,11 +294,21 @@ img {
                 vertical-align: middle;
                 margin-left: auto;
                 font-size: 40px;
+                transition: all 1s;
+                &:hover {
+                    transition: all 1s;
+                    font-size: 50px;
+                    transform: rotate(90deg);
+                }
             }
         }
     } 
 }
 
+.svgcolor-light {
+    // fill: linear-gradient(to right, rgba( 4, 194, 201, 0.16) , rgba( 228, 247, 20, 0.19));
+    background-image: linear-gradient(to right, rgba( 4, 194, 201, 0.16) , rgba( 228, 247, 20, 0.19));
+}
 
 .content-center{
     /* padding-left: auto;
@@ -298,7 +332,8 @@ img {
         // background-image:none;// linear-gradient(to right, white , $color-lightgray);
     }
 
-    width: 100%;
+    // height: 100vh;
+    width: 100vw;
 
     align-items: center;
 
@@ -307,10 +342,22 @@ img {
         padding-top: 30px;
         text-align: center;
         animation: slide-in-right 1s ease both;
-
+        position: relative;
         .section-title {
             display: inline;
-            border-bottom: 2px solid $color-black;   
+            text-transform: uppercase;
+            font-weight: bold;
+            
+            &::after {
+                content: '';
+                position: absolute;
+                width: 60px;
+                height: 100%;
+                top: 10%;
+                left: 50%;
+                transform: translate(-50%, 0);
+                border-bottom: 2px solid $color-black;  
+            } 
         }
     }
     
@@ -324,13 +371,18 @@ img {
             transform: translateX(0);
         }
     }
-    
 }
 
 
 footer {
     background-color: $color-darkblue;
     color: $color-white;
+
+    .footer-copyright {
+        margin: auto;
+        font-size: 14px;
+        padding-left: 30px;
+    }
 
     .social {
         float: right;
@@ -339,7 +391,7 @@ footer {
         flex-flow: row wrap;
     
         .social-icons {
-            width: 40px;
+            width: 45px;
             height: 40px;
         }
     }
