--- a/main.scss
+++ b/main.scss
@@ -19,6 +19,11 @@ $screen-lg-min: 992px;
 // Large tablets and desktops
 $screen-xl-min: 1200px;
 
+html, body {
+    // // width: 100vw;
+    // height: auto;
+    width: fit-content;
+}
 body {
     // background-color: darkblue;
     background-color: $color-darkblue !important;
@@ -26,31 +31,31 @@ body {
     figure {
         margin: 0;
     }
+}
 
-    nav {
-        position: fixed;
-        opacity: 0.9;
-        top: 0;
-        left: 0;
-        width: 100%;
-        padding-left: 30px;
-        z-index: 100;
-        background-color: $color-darkblue;
-        border: none;
-        border-bottom: 2px solid $color-lightblue; 
+nav {
+    position: fixed;
+    opacity: 0.9;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding-left: 30px;
+    z-index: 100;
+    background-color: $color-darkblue;
+    border: none;
+    border-bottom: 2px solid $color-lightblue; 
 
-        .navbar-brand {
-            color: $color-white;
-            padding-right: 30px;
-            transition: color 0.5s;
-            text-transform: uppercase;
+    .navbar-brand {
+        color: $color-white;
+        padding-right: 30px;
+        transition: color 0.5s;
+        text-transform: uppercase;
 
-            &.active {
-                color: $color-lightpink;
-            }
-            &:hover {
-              cursor: pointer;
-            }
+        &.active {
+            color: $color-lightpink;
+        }
+        &:hover {
+          cursor: pointer;
         }
     }
 }
@@ -87,7 +92,7 @@ div, p {
     @media (min-width: $screen-sm-min) and (max-width: $screen-lg-min){
         font-size: 22px;
     }
-    @media (max-width: $screen-lg-min) {
+    @media (min-width: $screen-lg-min) {
         font-size: 26px;
     }
 }
@@ -111,6 +116,7 @@ img {
 
 .home-body {
     position: relative;
+    height: 100vh;
     figure {
         &.masthead {
             height: 100%; 
@@ -157,10 +163,12 @@ img {
         padding: 20px;
 
         figure img {
-            width: 300px;
-            height: 200px;
-            max-width: 300px;
-            max-height: 300px;
+            // width: 300px;
+            // height: 200px;
+            max-width: 350px;
+            max-height: 450px;
+            border-radius: 20px;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
             transition: all 1.2s;
             opacity: 1;
             filter: blur(0px);
@@ -303,7 +311,7 @@ img {
         margin: 5% auto; /* 15% from the top and centered */
         padding: 20px;
         border: 2px solid #888;
-        width: 90vw;
+        width: 95vw;
     
         figure {
             margin: -20px;
