nav bar mobile minor update (needs word)

--- a/main.scss
+++ b/main.scss
@@ -77,7 +77,7 @@ nav {
         display: none;
     }
     .navbar--mobile {
-        display: block;
+        float: right;
         i {
             font-size: 28px;
         }
