--- a/main.scss
+++ b/main.scss
@@ -53,6 +53,7 @@ nav {
     top: 0;
     left: 0;
     width: 100%;
+    max-width: 100vw;
     padding-left: 30px;
     z-index: 100;
     background-color: $color-darkblue;
