--- a/main.scss
+++ b/main.scss
@@ -48,7 +48,7 @@ h1 {
 }
 
 nav {
-    position: fixed;
+    position: sticky;
     opacity: 0.9;
     top: 0;
     left: 0;
@@ -61,6 +61,7 @@ nav {
     border-bottom: 2px solid $color-lightblue; 
     color: $color-white;
 
+    transition: all 0.6s;
     .navbar-brand {
         padding-right: 30px;
         transition: color 0.5s;
@@ -88,6 +89,7 @@ nav {
         .navbar-brand {
             display: inline-block;
             width: 100%;
+            transition: all 0.6s;
         }
     }
 
@@ -250,14 +252,14 @@ img {
         width: 100%;
         padding: 20px 0;
 
-        ul {
+        .row {
             display: flex;
             flex-flow: row wrap;
             justify-content: space-around;
             list-style: none;
             padding: 10px;
 
-            li {
+            .portfolio-item {
                 display: inline;
                 margin: 10px;
                 position: relative;
@@ -431,7 +433,7 @@ img {
     // margin: auto;
 }
 
-.section {
+section {
     &:first-child {
         margin-top: -20px;
     }
