--- a/main.scss
+++ b/main.scss
@@ -247,6 +247,10 @@ img {
         }
     }
 
+    .product-details {
+        width: 50px;
+        height: 50px;
+    }
     .skill-title {
         margin: auto;
     }
