--- a/main.scss
+++ b/main.scss
@@ -306,16 +306,19 @@ img {
                         // display: block;
                     }
                 }
-                figure img {
-                    // width: 300px;
-                    // height: 200px;
-                    // max-width: 300px;
-                    // max-height: 300px;
-                    min-width: 300px;
-                    min-height: 300px;
-                    transition: all 1.2s;
-                    opacity: 1;
-                    filter: blur(0px);
+                figure {
+                    background-color: white;
+                    img {
+                        // width: 300px;
+                        // height: 200px;
+                        // max-width: 300px;
+                        // max-height: 300px;
+                        min-width: 300px;
+                        min-height: 300px;
+                        transition: all 1.2s;
+                        opacity: 1;
+                        filter: blur(0px);
+                    }
                 }
 
                 .preview {
