--- a/main.scss
+++ b/main.scss
@@ -308,6 +308,7 @@ img {
                 }
                 figure {
                     background-color: white;
+                    height: 100%;
                     img {
                         // width: 300px;
                         // height: 200px;
