modal close button to icon

--- a/main.scss
+++ b/main.scss
@@ -451,16 +451,19 @@ img {
         }
         .row {
             margin: 0px;
+            height: 80px;
     
             .close {
                 vertical-align: middle;
+                margin: 20px;
                 margin-left: auto;
                 font-size: 40px;
                 transition: all .5s;
                 &:hover {
                     transition: all .5s;
                     font-size: 50px;
-                    transform: rotate(90deg);
+                    margin-top: 15px;
+                    // margin-bottom: 15px;
                 }
             }
         }
